<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/normalno"
    app:layout_constraintGuide_percent="0.5"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="205dp"
        android:layout_height="265dp"
        android:contentDescription="@string/description_cat"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cat"
        tools:srcCompat="@drawable/cat" />

    <Button
        android:id="@+id/btnRv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/pozTeksta"
        android:contentDescription="@string/btnRV"
        android:fontFamily="serif"
        android:text="@string/btnRV"
        android:textColor="@color/black"
        android:textColorLink="@color/naslov"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/btnRV" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:contentDescription="@string/textRv"
        android:fontFamily="serif"
        android:text="@string/textRv"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/btnDalje"
        android:layout_width="205dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/btnsec"
        android:contentDescription="@string/button"
        android:fontFamily="serif"
        android:text="@string/button"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtVaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/backgroundColor"
        android:contentDescription="@string/prikaz_stanja_u_zdjelici"
        android:text="@string/prikaz_stanja_u_zdjelici"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRv" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:background="@color/backgroundColor"
        android:contentDescription="@string/description_posuda"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/txtVaga"
        app:layout_constraintStart_toStartOf="@+id/txtVaga"
        app:layout_constraintTop_toBottomOf="@+id/txtVaga"
        app:srcCompat="@drawable/zdjela"
        tools:srcCompat="@drawable/zdjela" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="215dp"
        android:layout_height="267dp"
        android:contentDescription="@string/description_dog"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dog"
        tools:srcCompat="@drawable/dog" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title"
        android:fontFamily="serif"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title" />

</androidx.constraintlayout.widget.ConstraintLayout>